--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 <html>
-    <head>
-        <title>Mr.Beaver</title>
-        <link rel="stylesheet" href="style.css"/>
-    </head>
     <body>
        <header>
            Da
@@ -10,13 +6,14 @@
            <div class="a">
              <form action="http://htmlbook.ru/html/form/action">
    <fieldset>
-    <legend class="b">Выберите что-бы узнать об наз больше</legend>
+    <legend class="b">Выберите что-бы узнать о нас больше</legend>
     <select onchange="document.location=this.options[this.selectedIndex].value">
-      <option value="#a">киси миси</option>
-      <option value="#a">Хагги-Вагги</option>
-      <option value="techinfo.html">Мама длинные ноги</option>
-      <option value="study.html">синяя и зеленая рука</option>
-      <option value="study.html">синяя и красная рука</option>
+        <ol>
+      <li><option value="#a">каталог</option></li>
+      <li><option value="#a">социальные сети</option></li>
+      <li><option value="techinfo.html">контакты</option></li>
+      <li><option value="study.html">предложения,сотрудничество</option></li>
+        </ol>
     </select>
    </fieldset>
   </form> 
